fix: update .gitignore and .prettierignore to exclude mysql-data; modify Dockerfile command and adjust volume mapping in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
 
     volumes:
       - ./Caddyfile-dev:/etc/caddy/Caddyfile
-      - ./static/uploads:/uploads
+      - ./static:/uploads
 
 networks:
   clinic_system:
