fix: update reverse proxy port to 3000 in Caddyfile; adjust Dockerfile to expose port 3000 and run build command; modify volume mapping in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - 8000:8000
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./static:/uploads
+      - ./static/uploads:/uploads
 
 networks:
   clinic_system:
