fix: update DATABASE_URL in .env and docker-compose for MySQL; switch to pos database; update Svelte adapter to adapter-node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: coffeelake
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: pos
     volumes:
       - ./mysql-data:/var/lib/mysql:rw
     networks:
