fix: update Caddyfile to use port 8080 for Adminer; adjust Dockerfile CMD to include env-file; modify docker-compose for service dependencies and volume mappings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,34 @@
 services:
+  db:
+    image: mysql:8.0
+    container_name: db
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    expose:
+      - 3306
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: coffeelake
+      MYSQL_DATABASE: pos
+    volumes:
+      - ./mysql-data:/var/lib/mysql
+    networks:
+      - clinic_system
   svelte:
     container_name: svelte
     restart: always
     depends_on:
       db:
         condition: service_started
-        required: false
-    build: .
+        required: true
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .:/app
       - /app/node_modules
-    networks:
-      - clinic_system
-  db:
-    image: mysql:8.0
-    container_name: db
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: coffeelake
-      MYSQL_DATABASE: pos
-    volumes:
-      - ./mysql-data:/var/lib/mysql:rw
+      - /app/build
     networks:
       - clinic_system
   adminer:
@@ -39,7 +46,7 @@ services:
     ports:
       - 80:80
       - 443:443
-      - 8000:8000
+      - 8080:8080
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - ./static/uploads:/uploads
