--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Replace with your DB credentials!
-DATABASE_URL="mysql://root:coffeelake@db:3306/pos"
+DATABASE_URL="mysql://root:coffeelake@localhost:3306/pos"
