--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@types/qrcode": "^1.5.5",
 		"drizzle-orm": "^0.38.4",
-		"mysql2": "^3.12.0"
+		"mysql2": "^3.12.0",
+		"qrcode": "^1.5.4"
 	}
 }
