--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@types/qrcode": "^1.5.5",
+		"cropperjs": "^1.6.2",
 		"drizzle-orm": "^0.38.4",
 		"mysql2": "^3.12.0",
 		"qrcode": "^1.5.4"
