--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"cropperjs": "^1.6.2",
 		"drizzle-orm": "^0.38.4",
 		"mysql2": "^3.12.0",
-		"qrcode": "^1.5.4"
+		"qrcode": "^1.5.4",
+		"sharp": "^0.33.5"
 	}
 }
