--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"db:push": "drizzle-kit push",
 		"db:mig": "drizzle-kit migrate",
+		"db:seed": "bun src/lib/server/db/seed.ts ",
 		"db:gen": "drizzle-kit generate",
 		"db:studio": "drizzle-kit studio"
 	},
@@ -36,6 +37,7 @@
 		"svelte": "^5.0.0",
 		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.0.0",
+		"tsx": "^4.19.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
@@ -46,6 +48,7 @@
 		"@oslojs/encoding": "^1.1.0",
 		"@types/qrcode": "^1.5.5",
 		"cropperjs": "^1.6.2",
+		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
 		"mysql2": "^3.12.0",
 		"qrcode": "^1.5.4",
