--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"cropperjs": "^1.6.2",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
+		"jsbarcode": "^3.11.6",
 		"mysql2": "^3.12.0",
 		"qrcode": "^1.5.4",
 		"sharp": "^0.33.5"
