--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@types/qrcode": "^1.5.5",
+		"@typescript-eslint/eslint-plugin": "^8.26.1",
+		"@typescript-eslint/parser": "^8.26.1",
 		"cropperjs": "^1.6.2",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
+		"eslint-plugin-drizzle": "^0.2.3",
 		"jsbarcode": "^3.11.6",
 		"mysql2": "^3.12.0",
 		"qrcode": "^1.5.4",
