--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Replace with your DB credentials!
-DATABASE_URL="mysql://user:password@host:port/db-name"
+DATABASE_URL="mysql://root:coffeelake@127.0.0.1:3306/pos"
