--- a/Caddyfile
+++ b/Caddyfile
@@ -6,6 +6,9 @@ ndcomputer.net {
 		root * /uploads
 		file_server browse
 	}
+	handle_path /adminer* {
+		reverse_proxy adminer:8080
+	}
 }
 :80 {
 	handle /uploads* {
