fix post network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     image: adminer
     restart: always
     networks:
-      - hms_network
+      - pos_network
 networks:
   pos_network:
     driver: bridge
