--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./static/uploads:/home/bun/app/static/uploads
+      - ./uploads:/home/bun/app/uploads
       - /app/build
     networks:
-      - pos_network
+      - hms_network
   db:
     image: mysql:8.0
     container_name: db
@@ -25,30 +25,31 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: coffeelake
-      MYSQL_DATABASE: pos
+      MYSQL_DATABASE: hms
     volumes:
       - ~/mysql-data:/var/lib/mysql
     networks:
-      - pos_network
+      - hms_network
+  adminer:
+    container_name: adminer
+    image: adminer
+    restart: always
+    networks:
+      - hms_network
   caddy:
     container_name: caddy
     image: caddy:2.8.4-alpine
     restart: always
     networks:
-      - pos_network
+      - hms_network
     ports:
       - 80:80
       - 443:443
       - 8080:8080
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./static/uploads:/uploads
-  adminer:
-    container_name: adminer
-    image: adminer
-    restart: always
-    networks:
-      - pos_network
+      - ./uploads:/uploads
+
 networks:
-  pos_network:
+  hms_network:
     driver: bridge
